--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ ul, ol{
     font-family: Raleway, sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
@@ -64,16 +64,19 @@ main {
 
 .title-button {border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
     height: 56px;
     color: #fff;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    font-weight: 500;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background: #4d5ae5;
 
 }
 .title-button:hover,
 .title-button:focus {
-    color: #404bbf;
+    background-color: #404BBF;
+    cursor: pointer 
 }
 .info-back{
     background-color: #fff;
@@ -84,6 +87,8 @@ main {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        line-height: 1.11;
+        text-transform: capitalize;
 }
 
 .info-down {
@@ -128,10 +133,11 @@ main {
 .portfolio {
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.11111;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize;
 }
 
 .portfolio-case {
@@ -171,7 +177,7 @@ color: #f4f4fd;
 .mission {
         font-weight: 400;
         font-size: 16px;
-        line-height: 1.5;
+        line-height: 1.17;
         letter-spacing: 0.02em;
         color: #f4f4fd;
 }
