--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,15 @@ main {
     font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #2E2F42;}
+    
+.title-back{
+    background-color: #2e2f42;
+}
+
 .title {
         font-weight: 700;
         font-size: 56px;
-        line-height: 1.07143;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
@@ -87,7 +92,7 @@ main {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        line-height: 1.11;
+        line-height: 1.2;
         text-transform: capitalize;
 }
 
@@ -99,7 +104,7 @@ main {
         color: #434455;
 }
 .team-back{
-    background-color: #f4f4fd;;
+    background-color: #FFFFFF;
 }
 .team {
         font-weight: 700;
@@ -108,6 +113,8 @@ main {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        line-height: 1.11;
+        text-transform: capitalize;
 }
 
 .team-foto {
@@ -165,7 +172,7 @@ footer{
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16667;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -177,7 +184,7 @@ color: #f4f4fd;
 .mission {
         font-weight: 400;
         font-size: 16px;
-        line-height: 1.17;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
 }
