--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ ul, ol{
 }
 
 .logo-part {
-    color: #2e2f42;
+        color: #2e2f42;
 }
 
 .nav-link {
@@ -104,7 +104,7 @@ main {
         color: #434455;
 }
 .team-back{
-    background-color: #FFFFFF;
+        background-color: #F4F4FD;
 }
 .team {
         font-weight: 700;
@@ -172,7 +172,7 @@ footer{
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.7;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
