--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ main {
         color: #fff;
 }
 
-.title-button {border-radius: 4px;
+.title-button {
     color: #fff;
     line-height: 1.5;
     letter-spacing: 0.04em;
