--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ ul, ol{
         color: #2e2f42;
 }
 
+.logo-part-footer{
+        color: #2e2f42;
+}
+
 .nav-link {
         font-weight: 500;
         font-size: 16px;
