--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,10 @@ main {
         text-transform: capitalize;
 }
 
+.team-li{
+        background-color: #FFFFFF
+}
+
 .team-foto {
         font-weight: 500;
         font-size: 20px;
