--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,15 @@ main {
         color: #2e2f42;
 }
 
+.team-job {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #434455;
+}
+
 .portfolio-back{
     background-color: #fff;
 }
